@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/tlp
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
+  Depend on x86_energy_perf_policy, provided by either
+  sys-power/linux-x86-power-tools or sys-apps/linux-misc-apps.
 
 *tlp-0.6-r1 (09 Oct 2014)
   09 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6-r1.ebuild,
